Finalised all game mechanics

--- a/Python/blackjack.ipynb
+++ b/Python/blackjack.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This entire cell is for game setup and needs to only be run once.\n",
+    "# This entire cell is for game setup and only needs to be run once.\n",
     "\n",
     "import numpy as np\n",
     "from random import randint\n",
@@ -97,12 +97,14 @@
     "                deck[card] = deck[random]\n",
     "                deck[random] = swap\n",
     "\n",
+    "    def deal_cards(self, dealer, player):\n",
+    "        for i in range(0, 2):\n",
+    "            dealer.hand.append(deck.pop(0))\n",
+    "            player.hand.append(deck.pop(0))\n",
+    "\n",
+    "\n",
     "class Dealer:\n",
     "    hand = []\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        for i in range(0, 2):\n",
-    "            self.hand.append(deck.pop(0))\n",
     "\n",
     "    def show_hand(self, visibility):\n",
     "        lines = [f'', f'', f'', f'', f'', f'']\n",
@@ -115,7 +117,7 @@
     "        for line in lines:\n",
     "            print(line)\n",
     "\n",
-    "    def get_total(self):\n",
+    "    def get_total(self, checks = True, print_value = True):\n",
     "        total = 0\n",
     "        for card in self.hand:\n",
     "            if card.value == 'A':\n",
@@ -127,24 +129,20 @@
     "                total += 10\n",
     "            else:\n",
     "                total += card.value\n",
-    "        print(f\"Dealer's total points: {total}\\n\")\n",
-    "        self.check_bust(total)\n",
-    "        self.check_blackjack(total)\n",
+    "        if print_value == True:\n",
+    "            print(f\"Dealer's total points: {total}\\n\")\n",
+    "        if checks == True:\n",
+    "            self.check_bust(total)\n",
+    "            self.check_blackjack(total)\n",
     "        return total\n",
     "\n",
     "    def check_bust(self, total):\n",
     "        if total > 21:\n",
     "            print('Dealer BUST!')\n",
-    "            return True\n",
-    "        else:\n",
-    "            return False\n",
     "\n",
     "    def check_blackjack(self, total):\n",
     "        if total == 21:\n",
     "            print('Dealer BLACKJACK!')\n",
-    "            return True\n",
-    "        else:\n",
-    "            return False\n",
     "\n",
     "    def hit(self):\n",
     "        if self.get_total() < 17:\n",
@@ -155,13 +153,21 @@
     "\n",
     "class Player:\n",
     "    hand = []\n",
+    "    bet = 0.00\n",
+    "    earnings = 0.00\n",
     "\n",
-    "    def __init__(self):\n",
-    "        for i in range(0, 2):\n",
-    "            self.hand.append(deck.pop(0))\n",
-    "        self.show_hand()\n",
-    "        self.get_total()\n",
-    "\n",
+    "    def place_bet(self):\n",
+    "        while True:\n",
+    "            try:\n",
+    "                self.bet = float(input(\"Place your bet! Minimum bet is $5.00.\"))\n",
+    "            except ValueError:\n",
+    "                print(\"You must enter a numerical value.\")\n",
+    "                continue\n",
+    "            if self.bet > 5.00:\n",
+    "                print(f\"You just bet ${self.bet}.\")\n",
+    "                break\n",
+    "            else:\n",
+    "                print(\"Your bet must be a minimum of $5.00.\")\n",
     "\n",
     "    def show_hand(self):\n",
     "        lines = [f'', f'', f'', f'', f'', f'']\n",
@@ -171,7 +177,7 @@
     "        for line in lines:\n",
     "            print(line)\n",
     "\n",
-    "    def get_total(self):\n",
+    "    def get_total(self, checks = True, print_value = True):\n",
     "        total = 0\n",
     "        for card in self.hand:\n",
     "            if card.value == 'A':\n",
@@ -183,29 +189,69 @@
     "                total += 10\n",
     "            else:\n",
     "                total += card.value\n",
-    "        print(f'Total points: {total}\\n')\n",
-    "        self.check_bust(total)\n",
-    "        self.check_blackjack(total)\n",
+    "        if print_value == True:\n",
+    "            print(f'Your total points: {total}\\n')\n",
+    "        if checks == True:\n",
+    "            self.check_bust(total, True)\n",
+    "            self.check_blackjack(total, True)\n",
     "        return total\n",
     "\n",
-    "    def check_bust(self, total):\n",
+    "    def check_bust(self, total, print_outcome = False):\n",
     "        if total > 21:\n",
-    "            print('BUST!')\n",
-    "            return True\n",
-    "        else:\n",
-    "            return False\n",
+    "            if print_outcome == True:\n",
+    "                print('BUST!')\n",
     "\n",
-    "    def check_blackjack(self, total):\n",
+    "    def check_blackjack(self, total, print_outcome = False):\n",
     "        if total == 21:\n",
-    "            print('BLACKJACK!')\n",
-    "            return True\n",
-    "        else:\n",
-    "            return False"
+    "            if print_outcome == True:\n",
+    "                print('BLACKJACK!')\n",
+    "\n",
+    "    def action_prompt(self):\n",
+    "        next_move = input(\"What would you like to do? Enter 1 to STAND, 2 to HIT, or 3 to DOUBLE DOWN.\")\n",
+    "        if (bool(next_move != '1') ^ bool(next_move != '2') ^ bool(next_move != '3')):\n",
+    "            raise Exception(\"Please enter 1 to STAND, 2 to HIT, or 3 to DOUBLE DOWN.\")\n",
+    "        if next_move == '1':\n",
+    "            self.stand()\n",
+    "        elif next_move == '2':\n",
+    "            self.hit()\n",
+    "        elif next_move == '3':\n",
+    "            self.double_down()\n",
+    "        \n",
+    "    def stand(self):\n",
+    "        print(\"No longer drawing cards.\")\n",
+    "        self.show_hand()\n",
+    "        self.get_total()\n",
+    "\n",
+    "    def hit(self):\n",
+    "        print(\"Drawing another card . . .\")\n",
+    "        self.hand.append(deck.pop(0))\n",
+    "        self.show_hand()\n",
+    "        if self.get_total() < 21:\n",
+    "            self.action_prompt()\n",
+    "\n",
+    "    def double_down(self):\n",
+    "        print(\"Doubling your bet and drawing one more card . . .\")\n",
+    "        self.bet = self.bet * 2\n",
+    "        self.hand.append(deck.pop(0))\n",
+    "        self.show_hand()\n",
+    "        self.get_total()\n",
+    "    \n",
+    "    def endgame(self, dealer_total = None):\n",
+    "        if dealer_total is None:\n",
+    "            dealer_total = 100\n",
+    "        if bool((self.get_total(False, False) > dealer_total) and (self.get_total(False, False) <= 21)) ^ bool((self.get_total(False, False) <= 21) and (dealer_total > 21)):\n",
+    "            self.earnings += self.bet\n",
+    "            print(f\"You win! Your current earnings are: ${self.earnings}.\")\n",
+    "        elif bool((self.get_total(False, False) < dealer_total) and dealer_total <= 21) ^ bool(self.get_total(False, False) > 21):\n",
+    "            self.earnings -= self.bet\n",
+    "            print(f\"You lose. Your current earnings are: ${self.earnings}.\")\n",
+    "        elif self.get_total(False, False) == dealer_total:\n",
+    "            print(f\"Draw! Your current earnings are: ${self.earnings}.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +259,7 @@
      "output_type": "stream",
      "text": [
       "Cards in deck:\n",
-      "9 of Clubs, K of Diamonds, 7 of Diamonds, J of Clubs, 2 of Clubs, Q of Clubs, 2 of Spades, 7 of Spades, J of Hearts, 4 of Spades, 4 of Clubs, Q of Spades, 10 of Spades, 10 of Hearts, 7 of Clubs, K of Spades, 6 of Diamonds, 4 of Hearts, J of Spades, 10 of Clubs, 6 of Clubs, A of Spades, J of Diamonds, Q of Hearts, 3 of Clubs, 8 of Spades, 9 of Hearts, 9 of Spades, 7 of Hearts, 3 of Spades, K of Clubs, 8 of Hearts, A of Hearts, 5 of Hearts, 4 of Diamonds, Q of Diamonds, 8 of Diamonds, 8 of Clubs, 3 of Hearts, 6 of Spades, 5 of Diamonds, 10 of Diamonds, 2 of Hearts, 3 of Diamonds, 5 of Spades, K of Hearts, A of Clubs, 6 of Hearts, 9 of Diamonds, 5 of Clubs, 2 of Diamonds, A of Diamonds\n",
+      "9 of Spades, 6 of Spades, Q of Hearts, 6 of Hearts, 3 of Clubs, K of Spades, 3 of Hearts, 5 of Diamonds, 4 of Hearts, 7 of Hearts, 6 of Clubs, 10 of Hearts, 6 of Diamonds, 5 of Spades, A of Diamonds, K of Clubs, 9 of Hearts, 5 of Hearts, 3 of Spades, 3 of Diamonds, Q of Spades, 9 of Clubs, 7 of Diamonds, 10 of Diamonds, 10 of Clubs, A of Hearts, A of Clubs, 2 of Spades, 10 of Spades, K of Diamonds, 8 of Spades, J of Spades, 2 of Clubs, 5 of Clubs, J of Hearts, 9 of Diamonds, Q of Clubs, Q of Diamonds, 7 of Clubs, 2 of Diamonds, K of Hearts, J of Diamonds, 8 of Hearts, 4 of Clubs, 7 of Spades, A of Spades, 8 of Diamonds, 8 of Clubs, 4 of Spades, J of Clubs, 4 of Diamonds, 2 of Hearts\n",
       "\n",
       "Remaining cards: 52\n",
       "\n"
@@ -221,7 +267,7 @@
     }
    ],
    "source": [
-    "# Setting up the deck\n",
+    "# --- Setting up the deck ---\n",
     "d = Deck()\n",
     "d.shuffle_deck()\n",
     "d.print_deck()\n",
@@ -230,7 +276,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You just bet $30.0.\n"
+     ]
+    }
+   ],
+   "source": [
+    "player = Player()\n",
+    "player.place_bet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -239,12 +303,12 @@
      "text": [
       "Dealer's hand: \n",
       ".-------..-------.\n",
-      "|9  _   ||░░░░░░░|\n",
-      "|  ( )  ||░░░░░░░|\n",
-      "| (_x_) ||░░░░░░░|\n",
-      "|   Y  9||░░░░░░░|\n",
+      "|9  .   ||░░░░░░░|\n",
+      "|  / \\  ||░░░░░░░|\n",
+      "| (_,_) ||░░░░░░░|\n",
+      "|   I  9||░░░░░░░|\n",
       "'-------''-------'\n",
-      "Remaining cards: 50\n",
+      "Remaining cards: 48\n",
       "\n"
      ]
     }
@@ -252,13 +316,14 @@
    "source": [
     "# dealer \n",
     "dealer = Dealer()\n",
+    "d.deal_cards(dealer, player)\n",
     "dealer.show_hand('hide')\n",
     "d.print_card_count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -266,27 +331,61 @@
      "output_type": "stream",
      "text": [
       "Your hand: \n",
-      ".------..-------.\n",
-      "|7 /\\  ||J  _   |\n",
-      "| /  \\ ||  ( )  |\n",
-      "| \\  / || (_x_) |\n",
-      "|  \\/ 7||   Y  J|\n",
-      "'------''-------'\n",
-      "Total points: 17\n",
-      "\n",
-      "Remaining cards: 48\n",
+      ".-------..------.\n",
+      "|6  .   ||6_  _ |\n",
+      "|  / \\  ||( \\/ )|\n",
+      "| (_,_) || \\  / |\n",
+      "|   I  6||  \\/ 6|\n",
+      "'-------''------'\n",
+      "Your total points: 12\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "player.show_hand()\n",
+    "player.get_total()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Doubling your bet and drawing one more card . . .\n",
+      "Your hand: \n",
+      ".-------..------..-------.\n",
+      "|6  .   ||6_  _ ||3  _   |\n",
+      "|  / \\  ||( \\/ )||  ( )  |\n",
+      "| (_,_) || \\  / || (_x_) |\n",
+      "|   I  6||  \\/ 6||   Y  3|\n",
+      "'-------''------''-------'\n",
+      "Your total points: 15\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "player = Player()\n",
-    "d.print_card_count()"
+    "player.action_prompt()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -295,19 +394,21 @@
      "text": [
       "Dealer's hand: \n",
       ".-------..------.\n",
-      "|9  _   ||K /\\  |\n",
-      "|  ( )  || /  \\ |\n",
-      "| (_x_) || \\  / |\n",
-      "|   Y  9||  \\/ K|\n",
+      "|9  .   ||Q_  _ |\n",
+      "|  / \\  ||( \\/ )|\n",
+      "| (_,_) || \\  / |\n",
+      "|   I  9||  \\/ Q|\n",
       "'-------''------'\n",
       "Dealer's total points: 19\n",
-      "\n"
+      "\n",
+      "You lose. Your current earnings are: $-60.0.\n"
      ]
     }
    ],
    "source": [
     "dealer.show_hand('show')\n",
-    "dealer.hit()"
+    "dealer.hit()\n",
+    "player.endgame(dealer.get_total(False, False))"
    ]
   }
  ],
